<resources>
    <string name="app_name">标签管理系统</string>

    <string name="write">写入</string>
    <string name="back">返回</string>

    <!--item_left_menu 侧滑菜单栏-->
    <string name="menu_set">设置</string>
    <string name="menu_vocie">声音</string>
    <string name="menu_shake">震动</string>
    <string name="menu_more">更多</string>
    <string name="menu_guide">新手指南</string>
    <string name="menu_update">版本信息</string>
    <string name="menu_help">帮助</string>
    <string name="menu_agreement">用户协议</string>

    <string name="menu_tab_read">读取</string>
    <string name="menu_tab_write">写入</string>
    <string name="menu_tab_file">文件管理</string>

    <string name="voice_open">声音已开启</string>
    <string name="voice_close">声音已关闭</string>
    <string name="shake_open">震动已开启</string>
    <string name="shake_close">震动已关闭</string>

    <string name="write_title_one">单个写入</string>
    <string name="write_title_more">批量写入</string>
    <string name="write_single_device">设备信息</string>
    <string name="write_single_rack">机柜信息</string>

    <string name="scan_file">正在扫描文件中…</string>

    <string name="fragment_read_text">请将标签放置在设备读取处</string>
    <string name="read_height">占用U位数(U)</string>
    <string name="read_shenmingzhouqi">资产生命周期(年)</string>
    <string name="read_weights">重量(Kg)</string>
    <string name="read_rate_power">额定功率(W)</string>
    <string name="rack_operating_mode">操作方式</string>
    <string name="fragment_action">获取</string>
    <string name="fragment_action2">录入</string>
    <string name="fragment_status_unused">未使用</string>
    <string name="fragment_status_failed">失败</string>
    <string name="fragment_status_success">成功</string>
    <string name="gui_user">账户名</string>
    <string name="rack_pwd">密码</string>
    <string name="rack_center">数据中心区域</string>
    <string name="rack_center_name">数据中心名称</string>
    <string name="rack_row">机柜行号(1–500)</string>
    <string name="rack_column">机柜列号(1–500)</string>
    <string name="rack_ipv4">IPv4地址</string>

    <string name="write_more">批量写入</string>
    <string name="header_class">全部分组</string>
    <string name="header_status">全部状态</string>
    <string name="ungrouped">未分组</string>
    <string name="writed">已写入</string>
    <string name="no_write">未写入</string>
    <string name="write_again">再次写入</string>
    <string name="write_again_tishi">请确定该标签是否再次写入？</string>
    <string name="no_select_data">无筛选信息</string>

    <!--写标签-->
    <string name="sn">序列号</string>
    <string name="device_modle">设备型号</string>
    <string name="device_type">设备类型</string>
    <string name="height">占用U位数(1–54)</string>
    <string name="vendor">厂商</string>
    <string name="shenmingzhouqi">资产生命周期(1–20)</string>
    <string name="first_time">首次使用日期</string>
    <string name="weights">重量(1–5000)</string>
    <string name="rate_power">额定功率(1–10000)</string>
    <string name="owner">资产所有人</string>
    <string name="bujian_num">部件号</string>
    <string name="single_device_year">年</string>

    <!--写标签hint-->
    <string name="sn_hint">例：2102312AVH10J4000002</string>
    <string name="device_modle_hint">例：1288H V5</string>
    <string name="device_type_hint">例：Server</string>
    <string name="height_hint">例：2</string>
    <string name="vendor_hint">例：Huawei</string>
    <string name="shenmingzhouqi_hint">例：5</string>
    <string name="first_time_hint">例：2018–11–27</string>
    <string name="weights_hint">例：40</string>
    <string name="rate_power_hint">例：1000</string>
    <string name="owner_hint">例：Huawei</string>
    <string name="bujian_num_hint">例：Device-09</string>
    <string name="write_name">请输入</string>
    <string name="write_pwd">请输入</string>

    <!--提示-->
    <string name="write_must">*号为必写选项!</string>
    <string name="write_string_err">请输入合法字符!</string>
    <string name="write_height_err">请输入范围在1–54之间的整数!</string>
    <string name="num_err_500">请输入范围在1–500之间的整数!</string>
    <string name="num_err_32">请输入范围在1–32之间的整数!</string>
    <string name="num_err_128">请输入范围在1–128之间的整数!</string>
    <string name="num_err_10w">请输入范围在1–100000之间的整数!</string>
    <string name="write_shengmingzhouqi_err">请输入范围在1–20之间的整数!</string>
    <string name="write_weight_err">请输入范围在1–5000之间的整数!</string>

    <string name="write_gonglv_err">请输入范围在1–10000之间的整数!</string>
    <string name="write_dialog_title">RFID写入警告!</string>
    <string name="write_dialog_mesage">请将RFID标签靠近读\写卡区域</string>
    <string name="write_dialog_btnsu">确定</string>
    <string name="write_dialog_btnfa">取消</string>
    <string name="write_dialog2_title">写入成功!</string>
    <string name="write_dialog2_mesage">RFID写入成功,是否继续写入?</string>
    <string name="write_dialog2_btnsu">继续写入</string>
    <string name="write_dialog2_btnfa">取消</string>
    <string name="db_no_data">数据库中无对应信息</string>
    <string name="support">不支持MifareUltralight数据格式!</string>
    <string name="near">请将RFID标签或者贴纸靠近手机背面</string>

    <string name="crc_failed">CRC检验不通过</string>
    <string name="write_success">写入成功</string>
    <string name="write_failed">写入失败</string>
    <string name="write_ing">写入中…</string>
    <string name="toast_legal">请使用合法字符：英文、数字、_、-、空格</string>


    <string name="write_rack_style">操作方式</string>
    <string name="write_rack_cb_read">获取</string>
    <string name="write_rack_cb_write">录入</string>
    <string name="write_rack_user">账户名</string>
    <string name="write_rack_pwd">密码</string>
    <string name="write_rack_area">数据中心区域</string>
    <string name="write_rack_name">数据中心名称</string>
    <string name="write_rack_row">机柜行号(1–500)</string>
    <string name="write_rack_column">机柜列号(1–500)</string>
    <string name="write_rack_ip4_address">IPv4地址</string>
    <string name="rack_ipv4_mask">IPv4掩码(1–32)</string>
    <string name="rack_ipv4_gateway">IPv4网关</string>
    <string name="rack_ipv6_address">IPv6地址</string>
    <string name="rack_ipv6_prefix">IPv6前缀(1–128)</string>
    <string name="rack_ipv6_gateway">IPv6网关</string>
    <string name="rack_power">机柜供电能力(1–100000)</string>
    <string name="read_rack_power">机柜供电能力(W)</string>
    <string name="rack_status">配置状态</string>
    <string name="rack_msg">配置信息</string>

    <string name="file_feature_title">IT设备特征数据表</string>
    <string name="file_feature_address">文件路径：LabelRFID/feature</string>
    <string name="file_tag_title">设备标签清单表</string>
    <string name="file_tag_address">文件路径：LabelRFID/tag</string>

    <string name="no_file_error">LabelRFID/tag目录下没有可用文件</string>
    <string name="import_error">导入过程发生错误</string>
    <string name="no_file">未扫描到手机文件</string>
    <string name="file_name">文件名</string>
    <string name="del_hint">s后删除源文件</string>
    <string name="feature_num">标签数：</string>
    <string name="import_db">导入数据库</string>
    <string name="import_success">导入成功</string>
    <string name="dialog_error_title">导入失败</string>
    <string name="data_load">数据加载中…</string>
    <string name="see_history">查看导入历史记录</string>
    <string name="failed_save">失败日志已保存至</string>
    <string name="sure">确定</string>
    <string name="save_failed">错误信息保存失败</string>
    <string name="history">导入历史记录</string>
    <string name="history_add">新增</string>
    <string name="history_update">修改</string>
    <string name="history_del">删除</string>
    <string name="del_file">已删除源文件</string>
    <string name="expect_success">数据库导出完成，数据已保存至LabelRFID/log/History.xlsx</string>
    <string name="expect_nodata">无数据导出</string>
    <string name="export_failed">导出失败</string>
    <string name="check">校验</string>
    <string name="check_success">校验成功</string>
    <string name="check_failed">校验失败</string>
    <string name="delete">删除</string>
    <string name="delete_failed">文件删除失败</string>
    <string name="write_already">已写标签</string>
    <string name="all_tag">标签总数</string>
    <string name="again_status">状态</string>
    <string name="jiaoyan_success">校验成功，标签信息已同步到批量写入页面</string>
    <string name="is_del_file">确定删除此文件吗？</string>

    <!--新手指南 activity_newbie_guide-->
    <string name="guide_title1">读取</string>
    <string name="guide_model1">读取功能</string>
    <string name="guide_desc">在读取界面，将NFC标签贴近设备NFC功能区域，校验码验证通过则会成功读出标签内容，并显示出来。</string>
    <string name="guide_title2">写入</string>
    <string name="guide_model2_1">单个写入</string>
    <string name="guide_desc2_1">单个写入分为设备信息写入和机柜信息写入两个模块，*为必填项，必填项非空时，写入按钮可用。\n执行写入操作时，需将标签贴近设备NFC功能区，确保标签被读到，然后点击写入按钮，等待弹出toast提示框后，将标签离开NFC功能区即可完成写入操作。</string>
    <string name="guide_model2_2">批量写入</string>
    <string name="guide_desc2_2">批量写入功能需先在文件管理中对设备标签清单表进行校验，校验成功则可进行对表格中标签信息的批量写入操作。</string>
    <string name="guide_title3">文件管理</string>
    <string name="guide_model3_1">IT设备特征数据表</string>
    <string name="guide_desc3_1">IT设备特征数据表会读取LabelRFID/feature路径下的表格文件，然后可以执行导入数据库操作，以及查看导入历史。</string>
    <string name="guide_model3_2">设备标签清单表</string>
    <string name="guide_desc3_2">设备标签清单表会读取LabelRFID/tag路径下的表格文件，校验成功后会将数据存放到数据库中，可以在批量写入中对表格中的标签信息进行批量处理。</string>

    <!--检查更新 activity_check_update-->
    <string name="check_version">标签管理系统-</string>
    <string name="check_update">检查更新</string>
    <string name="new_version">当前版本V1.0.1</string>
    <string name="install_version">安装</string>

    <string name="welcome">欢迎使用标签管理系统</string>

    <!--帮助 activity_help-->
    <string name="help_title">热点问题</string>
    <string name="help_que_title">问题标题</string>
    <string name="help_que_way">具体解决方法</string>

    <string name="help_que_title1">1. 为什么我点击“批量写入”没有显示可录入的表格</string>
    <string name="help_que_content1">
        第一，查看文件管理的设备标签清单表，里面是否有表文件；\n第二，文件管理中的设备标签清单表是否已校验成功，没有校验是无法写入的。
    </string>
    <string name="help_que_title2">2. 为什么我的文件管理中没有文件</string>
    <string name="help_que_content2">
        需要将用到的Excel表文件放到指定目录下，系统才会检测到。\nIT设备特征数据表文件需要放在LabelRFID/feature路径下；\n设备标签清单表文件需要放在LabelRFID/tag路径下。
    </string>
    <string name="help_que_title3">3. 点击写入为什么提示我写入失败</string>
    <string name="help_que_content3">
        将标签贴近设备读写区域重新执行写卡操作，写入标签需要一定的时间，写入过程中需要标签一直贴近读写区域，若中途拿离标签可能会造成写入失败。
    </string>

    <!--用户协议-->
    <string name="agreement_title1">总则</string>
    <string name="agreement_text1">
        用户应当同意本协议的条款并按照页面上的提示使用本程序。用户在进行使用程序过程中即表示用户与本公司达成协议，完全接受本协议项下的全部条款。
    </string>
    <string name="agreement_title2">
        内容规范
    </string>
    <string name="agreement_text2">
        1、本条所述内容是指用户使用本服务过程中所制作、上载、复制、发布、传播的任何内容，包括但不限于帐号头像、名称、用户说明等注册信息及认证资料，或文字、语音、图片、视频、图文等发送、回复或自动回复消息和相关链接页面，以及其他使用帐号或本服务所产生的内容。
        \n2、用户不得利用“本软件”帐号或本服务制作、上载、复制、发布、传播如下法律、法规和政策禁止的内容：
        \n(1) 反对宪法所确定的基本原则的；
        \n(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
        \n(3) 损害国家荣誉和利益的；
        \n(4) 煽动民族仇恨、民族歧视，破坏民族团结的；
        \n(5) 破坏国家宗教政策，宣扬邪教和封建迷信的；
        \n(6) 散布谣言，扰乱社会秩序，破坏社会稳定的；
        \n(7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
        \n(8) 侮辱或者诽谤他人，侵害他人合法权益的；
        \n(9) 不遵守法律法规底线、社会主义制度底线、国家利益底线、公民合法权益底线、社会公共秩序底线、道德风尚底线和信息真实性底线的“七条底线”要求的；
        \n(10) 含有法律、行政法规禁止的其他内容的信息。
    </string>
    <string name="agreement_title3">其他</string>
    <string name="agreement_text3">
        本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。
    </string>


    <string name="nfc_erro">请在系统设置启用NFC功能!</string>
    <string name="nfc_erro2">设备不支持NFC!</string>


</resources>
