<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_index_all"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar"
        android:orientation="vertical">

        <include layout="@layout/item_toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/agm_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/agreement_title1"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/agm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/agreement_text1"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/agm_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_title2"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/agm_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/agreement_text2"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/agm_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_title3"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/agm_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/agreement_text3"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>