<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_more"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_error_title"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/failed_save"
        android:textColor="@color/light_gray"
        android:textSize="16sp" />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="失败日志已保存至"
        android:textColor="@color/dark_gray"
        android:textSize="16sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#e7edea" />


    <Button
        android:id="@+id/btn_sure"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/white_to_gray"
        android:text="@string/sure"
        android:textColor="@color/blue_to_deep" />
</LinearLayout>